--- a/client/index.html
+++ b/client/index.html
@@ -11,12 +11,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(client) app/vendor.css -->
-      <!-- bower:css -->
-      <link rel="stylesheet" href="bower_components/ladda/dist/ladda.min.css" />
-      <link rel="stylesheet" href="bower_components/sweetalert/lib/sweet-alert.css" />
-      <!-- endbower -->
-    <!-- endbuild -->
+
     <!-- build:css({.tmp,client}) app/app.css -->
     <link rel="stylesheet" href="app/app.css">
       <!-- injector:css -->
@@ -66,8 +61,12 @@
       <script src="bower_components/angular-ladda/dist/angular-ladda.min.js"></script>
       <script src="bower_components/sweetalert/lib/sweet-alert.js"></script>
       <script src="bower_components/angular-sweetalert/SweetAlert.js"></script>
-      <script src="bower_components/waypoints/lib/jquery.waypoints.js"></script>
-      <script src="bower_components/waypoints/lib/shortcuts/sticky.js"></script>
+      <script src="bower_components/jquery-waypoints/waypoints.js"></script>
+      <script src="bower_components/angular-waypoints/dist/angular-waypoints.js"></script>
+      <script src="bower_components/waypoints/lib/noframework.waypoints.min.js"></script>
+      <script src="bower_components/select2/select2.js"></script>
+      <script src="bower_components/ui-select/src/select3.js"></script>
+      <script src="bower_components/angular-ui-select/dist/select.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
