--- a/client/app/directives/conditionSettings/conditionSettings.html
+++ b/client/app/directives/conditionSettings/conditionSettings.html
@@ -14,7 +14,7 @@
     </div>
     <div class="col-lg-5 col-sm-5" ng-if="selectedField.choices.length > 0">
       <label for="">Option</label>
-        <ui-select multiple ng-model="field.condition.choice" theme="select2" style="width: 300px;">
+        <ui-select multiple ng-model="field.condition.choice" theme="select2" style="width: 300px;" ng-change='watchOptionsChange(field, section)'>
           <ui-select-match placeholder="Select options...">{{$item.label}}</ui-select-match>
           <ui-select-choices repeat="opt._id as opt in selectedField.choices">
             {{opt.label}}
