--- a/client/app/controllers/create/create.html
+++ b/client/app/controllers/create/create.html
@@ -155,7 +155,7 @@
           </div>
         </div>
         <div class="ui-sortable sortableList" ui-sortable="sortableOptions" ng-model="section.fields">
-          <div class="formFieldWrap" ng-repeat="field in section.fields">
+          <div class="formFieldWrap" ng-repeat="field in section.fields | orderBy:'sequence'">
             <div class="form-horizontal">
               <div class="formSection"  ng-if="field.edit_mode" >
                 <div class="formSort"><div class="draghandle"></div></div>
