Minor fixes in the form show

--- a/client/app/controllers/formshow/formshow.html
+++ b/client/app/controllers/formshow/formshow.html
@@ -36,7 +36,7 @@
 
       <div class="row-fluid">
         <div class="col-lg-12 col-sm-12">
-          <div class="form-show-container">
+          <div class="form-show-container form-show">
             <div ng-repeat="section in form.sections" ng-if='section.active'>
               <form ng-submit="saveFormResuts($event)">
                 <strong class="section-points">({{section.possible_points}} Possible Points, {{section.bonus_points}} Bonus)</strong>
