--- a/client/app/directives/prevElement/prevElement.html
+++ b/client/app/directives/prevElement/prevElement.html
@@ -23,7 +23,7 @@
     <div class="form-group">
       <type-badge></type-badge>
       <abbr title="Required" ng-if="field.required"> *</abbr>
-      <strong class="text-muted possible-points">[Points possible - {{findMax(field.choices)}}]</strong>
+      <strong class="text-muted possible-points">[Points possible - {{field.possible_points}}]</strong>
       <select id="field._id" class="form-control" ng-model="field.response" ng-change="watchResponses(field, section)">
         <option value="">– Select one –</option>
         <option ng-repeat="choice in field.choices" value="{{choice._id}}" ng-selected="choice._id == field.response">
@@ -39,7 +39,7 @@
       <type-badge></type-badge>
       <abbr title="Required" ng-if="field.required"> *</abbr>
 
-      <strong class="text-muted possible-points">[Points possible - {{findMax(field.choices)}}]</strong>
+      <strong class="text-muted possible-points">[Points possible - {{field.possible_points}}]</strong>
 
       <div class="inputLabel inline" ng-repeat="choice in field.choices">
         <input type="checkBox" ng-model="choice.selected" value="{{choice._id}}" id="{{choice._id}}" ng-change="watchResponses(field, section)" />
@@ -53,7 +53,7 @@
     <div class="form-group">
       <type-badge></type-badge>
       <abbr title="Required" ng-if="field.required"> *</abbr>
-      <strong class="text-muted possible-points">[Points possible - {{findMax(field.choices)}}]</strong>
+      <strong class="text-muted possible-points">[Points possible - {{field.possible_points}}]</strong>
       <div class="inputLabel inline" ng-repeat="choice in field.choices">
         <input type="radio" name="{{field._id}}" ng-model="field.response" value="{{choice._id}}" id="{{choice._id}}" ng-change="watchResponses(field, section)" />
         <label ng-bind-html="choice.label" for="{{choice._id}}"></label> <strong class="text-muted">&mdash;  [{{choice.points}} {{choice.points == 1 ? 'point' : 'points'}}]</strong>
