--- a/client/app/controllers/formshow/success.html
+++ b/client/app/controllers/formshow/success.html
@@ -7,7 +7,7 @@
         <div class="col-lg-12 col-sm-12">
           <div class="form-show-container">
             <h2 class="success-heading text-center">Congraturlations!! </h2>
-            <h4 class="sucess-sub-heading text-center"> You are now certified as a Gold level green lab.</h4>
+            <h4 class="sucess-sub-heading text-center"> You are now certified as a {{certificate.name}} level green lab.</h4>
 
             <div class="success-sharing">
               <ul class="sucess-sharing-list list-unstyled">
@@ -26,7 +26,7 @@
               <h1 class="certificate-heading">Green Laboratory Certification</h1>
               <div class="certificate-body">
                 <div class="certificate-logo">
-                  <img src="assets/images/green_labs.png" alt="">
+                  <img ng-src="{{certificate.logo}}" alt="">
                 </div>
                 <div class="certificate-content">
                   The University of Washington Environmental Stewardship and Sustainability Office certifies <span class="certificate-name"> Computer Science & Engineering </span> as a Green Laboratory.
@@ -34,7 +34,7 @@
               </div>
               <div class="certificate-footer">
                 <div class="certificate-sign">
-                  <img src="assets/images/sign.png" alt="">
+                  <img ng-src="{{certificate.sign}}" alt="">
                   <span>
                 Associate Vice President: Ruth Johnston <br>
                 University of Washington Finance and Facilities
