--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,7 @@
           <script src="app/controllers/createCertificate/createCertificate.js"></script>
           <script src="app/controllers/forms/forms.js"></script>
           <script src="app/controllers/formshow/formshow.js"></script>
+          <script src="app/controllers/formshow/formshowsuccess.js"></script>
           <script src="app/controllers/results/response.js"></script>
           <script src="app/controllers/results/results.js"></script>
           <script src="app/directives/conditionSettings/conditionSettings.js"></script>
