--- a/client/app/controllers/formshow/success.html
+++ b/client/app/controllers/formshow/success.html
@@ -41,7 +41,7 @@
               </span>
                 </div>
                 <div class="certificate-date">
-                  <span>29th Jan 2015</span>
+                  <span>{{formattedDate()}}</span>
                   <br> Date
                 </div>
               </div>
