--- a/client/index.html
+++ b/client/index.html
@@ -71,6 +71,13 @@
 
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="bower_components/waypoints/lib/shortcuts/sticky.js"></script>
+        <script src="bower_components/jspdf/jspdf.js"></script>
+        <script src="bower_components/jspdf/jspdf.plugin.addimage.js"></script>
+        <script src="bower_components/jspdf/jspdf.plugin.from_html.js"></script>
+        <script src="bower_components/jspdf/jspdf.plugin.javascript.js"></script>
+        <script src="bower_components/jspdf/jspdf.plugin.split_text_to_size.js"></script>
+        <script src="bower_components/jspdf/jspdf.plugin.standard_fonts_metrics.js"></script>
+
 
         <script src="app/app.js"></script>
 
