--- a/client/index.html
+++ b/client/index.html
@@ -65,6 +65,8 @@
       <script src="bower_components/ui-select/src/select3.js"></script>
       <script src="bower_components/angular-ui-select/dist/select.js"></script>
       <script src="bower_components/waypoints/lib/jquery.waypoints.min.js"></script>
+      <script src="bower_components/d3/d3.js"></script>
+      <script src="bower_components/nvd3/build/nv.d3.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
