Adding the graph

--- a/client/app/controllers/formshow/success.html
+++ b/client/app/controllers/formshow/success.html
@@ -30,6 +30,12 @@
                     <span class="divider"></span>
                     <span class="possible_point">{{possiblePoints}}</span>
                   </div>
+                  <div class="clearfix"></div>
+                  <div class="certf">
+                    <span class="text-muted">You are now..</span>
+                    <h1 class="certf-text"> {{certificate.name}} </h1>
+                    <small class="text-muted">certified green lab</small>
+                  </div>
                 </div>
               </div>
             </div>
