--- a/client/app/controllers/results/responses.html
+++ b/client/app/controllers/results/responses.html
@@ -25,9 +25,10 @@
           <div class="response-section" id="seciton-{{$index}}" ng-repeat="section in form.sections">
             <h3 class="response-section-title">{{section.title}}</h3>
             <div class="response-field" ng-repeat="field in section.fields">
-              {{field.type}}
-              <label for="">{{field.label}} – </label><span class="label label-points">
-              [{{field.points}} out of {{field.possible_points}}]</span>
+              <label for="">{{field.label}} </label>
+              <span class="label label-points" ng-if="field.type != 'text'">
+               – [{{field.aquired_points}} out of {{field.possible_points}}]
+              </span>
               <p>{{field.response}}</p>
             </div>
 
