--- a/client/app/controllers/results/responses.html
+++ b/client/app/controllers/results/responses.html
@@ -22,6 +22,36 @@
         <h5 class="main-page-title-info"> <span class="text-muted">Submitted by: </span> {{form.user_info.username}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="text-muted">Submitted on: </span> {{getFormatedDate(form.res_updated)}}</h5>
         </div>
         <div class="responses-container">
+          <div class="stats">
+            <div class="row-fluid">
+              <div class="col-lg-8 col-sm-8">
+                <div class="graph">
+                  <h3 class="graph-heading"> Your performance..</h3>
+                  <div id="chart" style="height: 250px; margin: 10px 0; ">
+                    <svg></svg>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-4">
+                <br>
+                <div class="scoreboard-square">
+                  <span class="aquired_point">{{aquiredPoints}}</span>
+                  <span class="divider"></span>
+                  <span class="possible_point">/ {{possiblePoints}}</span>
+                </div>
+                <div class="clearfix"></div>
+                <br>
+                <div class="certf">
+                  <span class="text-muted">You are now..</span>
+                  <h1 class="certf-text"> {{certificate.name}} </h1>
+                  <small class="text-muted">certified green lab</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        <div class="clearfix"></div>
+
           <div class="response-section" id="seciton-{{$index}}" ng-repeat="section in form.sections">
             <h3 class="response-section-title">{{section.title}}</h3>
             <div class="response-field" ng-repeat="field in section.fields">
