--- a/client/app/controllers/formshow/formshow.html
+++ b/client/app/controllers/formshow/formshow.html
@@ -62,7 +62,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;
                     <button class="btn btn-success" type="submit" ladda="formSaving" data-style="expand-left" tooltip="Save this form!" tooltip-append-to-body="true" ng-if="$index != form.sections.length - 1">Save</button>
 
-                    <button class="btn btn-success btn-lg" type="submit" ladda="formSaving" data-style="expand-left" tooltip="Submit this form!" tooltip-append-to-body="true" ng-if="$index == form.sections.length - 1" ng-click="form.submitted = true">Submit</button>
+                    <button class="btn btn-success btn-lg" ladda="formSaving" data-style="expand-left" tooltip="Submit this form!" tooltip-append-to-body="true" ng-if="$index == form.sections.length - 1" ng-click="form.submitted = true" type="submit">Submit</button>
                     &nbsp;&nbsp;&nbsp;
                     <button class="btn btn-primary" ng-click="moveToNextStep($index, section)" ng-if="$index != form.sections.length - 1"> Next step &rarr; </button>
                   </div>
