--- a/client/app/controllers/formshow/formshow.html
+++ b/client/app/controllers/formshow/formshow.html
@@ -49,7 +49,7 @@
                 <div class="row" ng-if="isAdmin()">
                 <div class="pull-right">
 
-                  <button class="btn  btn-success" ng-click="publishForm()" tooltip-append-to-body="true">Looks good Publish</button>
+                  <a class="btn  btn-warning" ng-href="{{getFormLink(form)}}" tooltip-append-to-body="true">&larr; Looks good take me back</a>
                   </div>
 
                 </div>
