--- a/client/app/directives/fieldElement/fieldElement.html
+++ b/client/app/directives/fieldElement/fieldElement.html
@@ -1,5 +1,6 @@
 <div class="js_form_template" >
   <div ng-switch="field.type">
+
     <!-- Text input -->
     <div data-option="text" ng-switch-when="text">
       <div class="col-lg-1">
@@ -12,6 +13,7 @@
         </div>
       </div>
     </div>
+
     <!-- Text area  -->
     <div ng-switch-when="textarea" data-option="textarea">
       <div class="col-lg-1"> </div>
@@ -21,12 +23,13 @@
         <condition-settings></condition-settings>
       </div>
     </div>
+
     <!-- Select -->
     <div data-option="select" ng-switch-when="select">
       <div class="col-lg-1">
       </div>
       <div class="col-lg-10">
-        <div class="multipleOptions" ng-repeat="choice in field.choices">
+        <div class="multipleOptions" ng-repeat="choice in field.choices" ng-class="{choicena: choice.is_na}">
           <span class="optionIndex">{{$index + 1}}. </span>
           <input type="text" values="option1" focus-on-show class="form-control" ng-model="choice.label" ng-focus="choice.focus">
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
@@ -34,6 +37,9 @@
             <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
             <span ng-if="field.choices.length > 1">
             <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
+            </span>
+            <span ng-if='choice.is_na'>
+              <strong for="" class="badge badge-info"> NA </strong>
             </span>
           </div>
         </div>
@@ -46,7 +52,7 @@
       <div class="col-lg-1">
       </div>
       <div class="col-lg-10">
-        <div class="multipleOptions" ng-repeat="choice in field.choices">
+        <div class="multipleOptions" ng-repeat="choice in field.choices" ng-class="{choicena: choice.is_na}">
           <input name="optionsRadio" type="radio" id="option1" class="fakeRadioCheckbox"  tabindex="-1">
           <input type="text" focus-on-show values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
@@ -69,7 +75,7 @@
       <div class="col-lg-1">
       </div>
       <div class="col-lg-10">
-        <div class="multipleOptions" ng-repeat="choice in field.choices">
+        <div class="multipleOptions" ng-repeat="choice in field.choices" ng-class="{choicena: choice.is_na}">
           <input name="optionsCheckboxes" type="checkBox" id="option1" class="fakeRadioCheckbox" tabindex="-1" >
           <input type="text" focus-on-show values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
@@ -77,6 +83,10 @@
             <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
             <span ng-if="field.choices.length > 1">
             <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
+            </span>
+
+            <span ng-if='choice.is_na'>
+              <strong for="" class="badge badge-info"> NA </strong>
             </span>
           </div>
         </div>
