--- a/client/app/directives/fieldElement/fieldElement.html
+++ b/client/app/directives/fieldElement/fieldElement.html
@@ -35,12 +35,21 @@
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
           <div class="multipleOptionsActions">
             <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
-            <span ng-if="field.choices.length > 1">
-            <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
-            </span>
+
+            <a href='' class="btn btn-xs btn-warning" href='' ng-click="addHelptext(choice)" tooltip="Add help text" ng-class="{showtip: choice.has_helptext}"> <em class="icon icon-question muted"></em> </a>
+
+            <a ng-if="field.choices.length > 1" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
+
             <span ng-if='choice.is_na'>
               <strong for="" class="badge badge-info"> NA </strong>
             </span>
+          </div>
+
+          <div class="clearfix"></div>
+          <div class="choice-help-text" ng-if="choice.has_helptext">
+            <textarea name="" id=""  placeholder="Tell some thing about this option" class="vert form-control" ng-model="choice.help_text"></textarea>
+            <br>
+            <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
           </div>
         </div>
         <na></na>
@@ -94,6 +103,9 @@
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
           <div class="multipleOptionsActions">
             <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
+
+            <a href='' class="btn btn-xs btn-warning" href='' ng-click="addHelptext(choice)" tooltip="Add help text" ng-class="{showtip: choice.has_helptext}"> <em class="icon icon-question muted"></em> </a>
+
             <span ng-if="field.choices.length > 1">
             <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
             </span>
@@ -102,6 +114,13 @@
               <strong for="" class="badge badge-info"> NA </strong>
             </span>
           </div>
+          <div class="clearfix"></div>
+          <div class="choice-help-text" ng-if="choice.has_helptext">
+            <textarea name="" id=""  placeholder="Tell some thing about this option" class="vert form-control" ng-model="choice.help_text"></textarea>
+            <br>
+            <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
+          </div>
+
         </div>
         <na></na>
         <condition-settings></condition-settings>
