Minor fixes in the form creation

--- a/client/app/directives/conditionSettings/conditionSettings.html
+++ b/client/app/directives/conditionSettings/conditionSettings.html
@@ -1,7 +1,8 @@
 <div class="field-condition">
   <div class="row field-condition-flag">
     <input type="checkbox" class="checkbox-small" name="addClarification" type="checkbox" id="addClarification" ng-model="field.has_condition">
-    <label for="addClarification" class="smallText">Show this question on condition</label>
+    &nbsp;
+    <label for="addClarification" class="smallText"> Show this question on condition</label>
   </div>
   <div class="row field-condition-questions" ng-if='field.has_condition'>
     <div class="col-lg-7 col-sm-7">
